--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "vlucas/phpdotenv": "~2.2",
     "firebase/php-jwt": " ^4.0",
     "prettus/l5-repository": "^2.6",
-    "dusterio/lumen-passport": "^0.2"
+    "dusterio/lumen-passport": "^0.2",
+    "guzzlehttp/guzzle": "^6.2"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
