--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "php": ">=5.6.4",
     "laravel/lumen-framework": "5.4.*",
     "vlucas/phpdotenv": "~2.2",
-    "guzzlehttp/guzzle": "^6.2"
+    "guzzlehttp/guzzle": "^6.2",
+    "intervention/image": "^2.3"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
